# GNT

./: .gitignore  eval.py  pyproject.toml  render.py  train.py
gnt/: criterion.py  transformer_network.py
